--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,5 +75,14 @@
             android:text="Save Data"
             android:textSize="16sp"/>
 
+        <Button
+            android:id="@+id/show_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"
+            android:text="Show Data"
+            android:textSize="16sp"/>
+
     </LinearLayout>
 </layout>
